test: create getGame service and hook test

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:unit": "jest --testPathPattern=src/components --collectCoverage=false",
+    "test:unit": "jest --testPathPattern='src/(components|services|hooks)' --collectCoverage=false",
     "test:integration": "jest --testPathPattern=src/app --collectCoverage=false",
     "check-outdated": "npx --yes -- check-outdated --ignore-pre-releases --columns name,type,current,latest,changes --types major,minor,patch,reverted",
     "storybook": "storybook dev -p 6006",
@@ -36,6 +36,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "22.10.3",
     "@types/react": "19.0.2",
