--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
