--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prettier": "^3.4.2",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
